# ops_ggml_benchmark

./: .gitignore  CLAUDE.md  CMakeLists.txt  FINAL_PERFORMANCE_REPORT.md  MEMORY_BANDWIDTH_ANALYSIS.md  README.md  bench.sh  bench_ggml.sh  bench_zendnn.sh  benchmark_results.csv  compare_backends.sh  profile_backends.sh  profile_backends_noperf.sh  script.py  shapes.txt  test_all_features.sh
cmake/: FetchLlamaCpp.cmake
configs/: llama-2-13b-chat-hf.cfg  llama-2-7b-chat-hf.cfg  llama-3.1-8b.cfg  llama-3.2-1b.cfg  mixtral-8x7b-balanced.cfg  mixtral-8x7b-imbalanced.cfg  mixtral-8x7b.cfg  mixtral_8x2_bf16.moe  phi-3-mini-128k-instruct.cfg  qwen2-7b.cfg  qwen3-coder-30b-a3b-balanced.cfg  qwen3-coder-30b-a3b-imbalanced.cfg  qwen3-coder-30b-a3b.cfg
gemm/: llama-2-13b-chat-hf.gemm  llama-2-7b-chat-hf.gemm  llama-3.1-8b.gemm  llama-3.2-1b.gemm  phi-3-mini-128k-instruct.gemm  qwen2-7b.gemm
include/: approach4.h  benchmark.h  cache_utils.h  ggml_matmul_bench.h  ggml_utils.h  layer_bench.h  layer_config.h  matmul_bench.h  moe_config.h  op_desc.h  routing_utils.h  zendnn_matmul_bench.h
src/: approach4.cpp  benchmark.cpp  cache_utils.cpp  ggml_matmul_bench.cpp  ggml_utils.cpp  layer_bench.cpp  layer_bench_ggml.cpp  layer_bench_zendnn.cpp  layer_config.cpp  main.cpp  matmul_bench.cpp  moe_config.cpp  routing_utils.cpp  unpack_benchmark.cpp  zendnn_matmul_bench.cpp
src/custom/: custom_moe.cpp  custom_moe.h  custom_moe_bench.cpp  custom_moe_bench.h
